created Redux and Axios, right before changing GuitarSVG player

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 NOODLER_DB_URI= mongodb+srv://admin-devin:m00nPhas3@cluster0.54ycb.mongodb.net/music_data?retryWrites=true&w=majority
+MODULES_NS = global
 PORT=5000
 
