--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tonaljs/tonal": "^4.6.2",
+    "axios": "^0.21.4",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "mongodb": "^4.1.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "snapsvg-cjs": "^0.0.6",
