--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-NOODLER_DB_URI= mongodb+srv://admin-devin:m00nPhas3@cluster0.54ycb.mongodb.net/music_data?retryWrites=true&w=majority
-MODULES_NS = global
+NOODLER_DB_URI= mongodb+srv://admin-devin:m00nPhas3@cluster0.54ycb.mongodb.net/main?retryWrites=true&w=majority
+MODULES_NS = main
 PORT=5000
+JWT_SECRET = blueviolet12345
 
