Module Lab fully functional

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-NOODLER_DB_URI= mongodb+srv://admin-devin:m00nPhas3@cluster0.54ycb.mongodb.net/main?retryWrites=true&w=majority
+NOODLER_DB_URI= mongodb+srv://admin-devin:m00nPhas3@cluster0.54ycb.mongodb.net/TEST?retryWrites=true&w=majority
 MODULES_NS = main
 PORT=5000
 JWT_SECRET = blueviolet12345
