--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "mongodb": "^4.1.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "save-svg-as-png": "^1.4.17",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "snapsvg-cjs": "^0.0.6",
@@ -26,6 +28,7 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -50,5 +53,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
