--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tonaljs/tonal": "^4.6.2",
+    "@tonejs/midi": "^2.0.28",
     "axios": "^0.21.4",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
